fix(internal): grid collapse

--- a/components/src/Grid/Grid.scss
+++ b/components/src/Grid/Grid.scss
@@ -137,6 +137,7 @@
 
 
   .grid-cell-value {
+    word-break: break-all; // For firefox
     word-break: break-word;
   }
 
